--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -42,3 +42,5 @@ jobs:
       with:
         name: Package
         path: build/libs
+    - name: Build the Docker image
+        run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
